Fix title spacing on mobile

--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
 
 	#name-header {
 		justify-content: start;
-		margin-left: 25px;
 	}
 
 	#name-sub-header {
@@ -47,11 +46,11 @@ body {
 		height: 100px;
 		width: 1000px;
 		margin-top: 30px;
-		font-size: 30px;
+		font-size: 28px;
 	}
 
 	#header-background img {
-		margin-top: 30px;
+		margin-top: 32px;
 		margin-left: 20px;
 		height: 65px;
 		display: inline;
